[SPARK-51210][CORE] Add `--enable-native-access=ALL-UNNAMED` to Java options for Java 24+
### What changes were proposed in this pull request?

This PR aims to `--enable-native-access=ALL-UNNAMED` to Java options.

### Why are the changes needed?

To remove restricted method warnings from [JEP 472: Prepare to Restrict the Use of JNI](https://openjdk.org/jeps/472) at Java 24+.

**sbt**
```
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by org.scalasbt.ipcsocket.NativeLoader in an unnamed module (file:/Users/dongjoon/.sbt/boot/scala-2.12.18/org.scala-sbt/sbt/1.9.3/ipcsocket-1.6.2.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled
```

**jline**
```
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by org.jline.nativ.JLineNativeLoader in an unnamed module (file:/Users/dongjoon/APACHE/spark-merge/assembly/target/scala-2.13/jars/jline-3.27.1-jdk8.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled
```

**netty**
```
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::loadLibrary has been called by io.netty.util.internal.NativeLibraryUtil in an unnamed module (file:/Users/dongjoon/.m2/repository/io/netty/netty-common/4.1.118.Final/netty-common-4.1.118.Final.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled
```

### Does this PR introduce _any_ user-facing change?

No, this is additional JVM option.

### How was this patch tested?

Manually tests.

### Was this patch authored or co-a